--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H-Tree</title>
-    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="js/script.js" defer></script>
 </head>
 
 <body>
-    <canvas id="canvas">
-    </canvas>
+    <div class="tree">
+        <canvas id="canvas"></canvas>
+    </div>
 </body>
 
 </html>
